--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,12 @@
 html {
   font-size: 62.5%;
 }
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background-color: rgb(41, 41, 41);
+  display: grid;
+  place-items: center;
+}
